# crazyflie-firmware

./: CLAUDE.md  pixi_activate.sh  pyproject.toml
src/modules/interface/: param.h
src/modules/interface/controller/: controller.h  controller_forcetorque.h  controller_rl.h  controller_rotvel.h  controller_throw.h  rl_policy_params.h  rl_throw_policy_params.h
src/modules/src/: param_logic.c  power_distribution_quadrotor.c
src/modules/src/controller/: Kbuild  controller.c  controller_forcetorque.c  controller_mellinger.c  controller_rl.c  controller_rotvel.c  controller_throw.c
